@@ -23,6 +23,8 @@ local $ENV{LC_ALL} = 'C';
 all_pod_files_spelling_ok();
 
 __DATA__
+ActionRole
+de
 Gerv
 Newell
 Wiki
